--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Mono:500">
   
-  <link rel="stylesheet" type="text/css" href="helium/icofont.min.css" />
-    <link rel="stylesheet" type="text/css" href="helium/laika-helium.css" />
-  
-  <script src="helium/laika-helium.js"></script>
-  
+  <link rel="stylesheet" type="text/css" href="helium/site/icofont.min.css" />
+    <link rel="stylesheet" type="text/css" href="helium/site/laika-helium.css" />
+    <link rel="stylesheet" type="text/css" href="helium/site/landing-page.css" />
+  <script src="helium/site/laika-helium.js"></script>
   
   
   <script> /* for avoiding page load transitions */ </script>
@@ -380,17 +379,17 @@
           <thead>
             <tr>
               <th>Property</th>
-              <th class="align-right">Default</th>
+              <th>Default</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>FRAMELESS<em>GEN</em>MIN_SIZE</td>
-              <td class="align-right">0</td>
+              <td>0</td>
             </tr>
             <tr>
               <td>FRAMELESS<em>GEN</em>SIZE_RANGE</td>
-              <td class="align-right">20</td>
+              <td>20</td>
             </tr>
           </tbody>
         </table>
