--- a/TypedEncoder.html
+++ b/TypedEncoder.html
@@ -176,14 +176,10 @@
 // both method now in object MdocApp0 of type =&gt; java.util.GregorianCalendar
 // and  method now in object MdocApp0 of type =&gt; java.util.GregorianCalendar
 // match expected type java.util.Calendar
-// val ds: Dataset[DateRange] = Seq(DateRange(now, now)).toDS()
-//                                            ^^^
 // error: ambiguous reference to overloaded definition,
 // both method now in object MdocApp0 of type =&gt; java.util.GregorianCalendar
 // and  method now in object MdocApp0 of type =&gt; java.util.GregorianCalendar
 // match expected type java.util.Calendar
-// val ds: Dataset[DateRange] = Seq(DateRange(now, now)).toDS()
-//                                                 ^^^
 // error: ambiguous reference to overloaded definition,
 // both method now in object MdocApp0 of type =&gt; java.util.GregorianCalendar
 // and  method now in object MdocApp0 of type =&gt; java.util.GregorianCalendar
@@ -200,9 +196,7 @@
 // val ds: TypedDataset[DateRange] = TypedDataset.create(Seq(DateRange(now, now)))
 //                                                      ^
 // error: method now is defined twice;
-//   the conflicting method now was defined at line 11:5
-// def now = new java.util.GregorianCalendar()
-// ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^</span></code></pre>
+//   the conflicting method now was defined at line 11:5</span></code></pre>
         <p>Type class derivation takes care of recursively constructing (and proving the existence of) <code>TypeEncoder</code>s for case classes. The following works as expected:</p>
         <pre class="keep-together pdf epub"><code class="nohighlight"><span class="keyword">case</span><span> </span><span class="keyword">class</span><span> </span><span class="type-name">Bar</span><span>(</span><span class="identifier">d</span><span>: </span><span class="type-name">Double</span><span>, </span><span class="identifier">s</span><span>: </span><span class="type-name">String</span><span>)
 </span><span class="keyword">case</span><span> </span><span class="keyword">class</span><span> </span><span class="type-name">Foo</span><span>(</span><span class="identifier">i</span><span>: </span><span class="type-name">Int</span><span>, </span><span class="identifier">b</span><span>: </span><span class="type-name">Bar</span><span>)
@@ -212,18 +206,14 @@
 </span><span class="comment">// ds: TypedDataset[Foo] = [i: int, b: struct&lt;d: double, s: string&gt;]
 </span><span>
 </span><span class="identifier">ds</span><span>.</span><span class="identifier">collect</span><span>()
-</span><span class="comment">// res3: frameless.Job[Seq[Foo]] = frameless.Job$$anon$4@375a65cb</span></code></pre>
+</span><span class="comment">// res3: frameless.Job[Seq[Foo]] = frameless.Job$$anon$4@710aeb54</span></code></pre>
         <p>But any non-encodable in the case class hierarchy will be detected at compile time:</p>
         <pre class="keep-together pdf epub"><code class="nohighlight"><span class="keyword">case</span><span> </span><span class="keyword">class</span><span> </span><span class="type-name">BarDate</span><span>(</span><span class="identifier">d</span><span>: </span><span class="type-name">Double</span><span>, </span><span class="identifier">s</span><span>: </span><span class="type-name">String</span><span>, </span><span class="identifier">t</span><span>: </span><span class="identifier">java</span><span>.</span><span class="identifier">util</span><span>.</span><span class="type-name">Calendar</span><span>)
 </span><span class="keyword">case</span><span> </span><span class="keyword">class</span><span> </span><span class="type-name">FooDate</span><span>(</span><span class="identifier">i</span><span>: </span><span class="type-name">Int</span><span>, </span><span class="identifier">b</span><span>: </span><span class="type-name">BarDate</span><span>)</span></code></pre>
         <pre class="keep-together pdf epub"><code class="nohighlight"><span class="keyword">val</span><span> </span><span class="identifier">ds</span><span>: </span><span class="type-name">TypedDataset</span><span>[</span><span class="type-name">FooDate</span><span>] = </span><span class="type-name">TypedDataset</span><span>.</span><span class="identifier">create</span><span>(
   </span><span class="type-name">Seq</span><span>(</span><span class="type-name">FooDate</span><span>(</span><span class="number-literal">1</span><span>, </span><span class="type-name">BarDate</span><span>(</span><span class="number-literal">1.1</span><span>, </span><span class="string-literal">&quot;s&quot;</span><span>, </span><span class="keyword">new</span><span> </span><span class="identifier">java</span><span>.</span><span class="identifier">util</span><span>.</span><span class="type-name">GregorianCalendar</span><span>))))
 </span><span class="comment">// error: ds is already defined as value ds
-// val ds: TypedDataset[Foo] = 
-//     ^^
 // error: ds is already defined as value ds
-// val ds: TypedDataset[FooDate] = TypedDataset.create(
-//     ^^
 // error: could not find implicit value for parameter encoder: frameless.TypedEncoder[repl.MdocSession.MdocApp0.FooDate]
 // val ds: TypedDataset[FooDate] = TypedDataset.create(
 //                                                    ^</span></code></pre>
